# kona

./: .dockerignore  .gitignore  .gitmodules  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.html  CONTRIBUTING.md  Cargo.toml  EXEX.md  EXEX_INTEGRATION_PLAN.md  Justfile  README-lint-scripts.md  README.md  RELEASES.md  ROLLUP_PLAN.md  check_unused_deps.sh  deny.toml  glossary.html  index.html  intro.html  justfile  lychee.toml  mise.toml  print.html  release.toml  searchindex.js  searchindex.json  typos.toml  validate_lint_directives.sh
crates/kona/: Cargo.toml
crates/node/disc/: Cargo.toml  README.md
crates/node/disc/src/: builder.rs  config.rs  driver.rs  error.rs  handler.rs  lib.rs  metrics.rs  node.rs
crates/node/disc/src/metrics/: mod.rs
crates/node/engine/: Cargo.toml  README.md
crates/node/engine/src/: actor.rs  attributes.rs  client.rs  controller.rs  controller_builder.rs  error.rs  kinds.rs  lib.rs  macros.rs  query.rs  skip.rs  state_builder.rs  status.rs  sync.rs  versions.rs
crates/node/engine/src/metrics/: mod.rs
crates/node/engine/src/state/: builder.rs  core.rs  error.rs  mod.rs
crates/node/engine/src/sync/: config.rs  mod.rs  mode.rs  status.rs
crates/node/engine/src/task_queue/: core.rs  mod.rs
crates/node/engine/src/tasks/: forkchoice.rs  mod.rs  traits.rs
crates/node/engine/tests/: actor.rs
crates/node/engine/tests/common/: mod.rs
crates/node/gossip/: Cargo.toml  README.md
crates/node/gossip/src/: behaviour.rs  block_validity.rs  builder.rs  config.rs  driver.rs  error.rs  event.rs  gate.rs  gater.rs  lib.rs
crates/node/gossip/src/behaviour/: core.rs  error.rs  mod.rs
crates/node/gossip/src/config/: mod.rs  params.rs  wrapper.rs
crates/node/gossip/src/driver/: broadcast.rs  builder.rs  config.rs  core.rs  errors.rs  handle.rs  mod.rs
crates/node/gossip/src/event/: mod.rs
crates/node/gossip/src/handler/: block.rs  error.rs  mod.rs  traits.rs
crates/node/gossip/src/rpc/: mod.rs  (+2 more)
crates/node/gossip/tests/: gossip_connect.rs
crates/node/p2p/: Cargo.toml  README.md
crates/node/p2p/src/: builder.rs  driver.rs  lib.rs  macros.rs
crates/node/p2p/tests/: dial_error_logging.rs  gossip_connect.rs
crates/node/rpc/: Cargo.toml  README.md
crates/node/rpc/maili/: Cargo.toml  README.md
crates/node/rpc/src/: admin.rs  api.rs  attributes.rs  config.rs  jsonrpsee.rs  launcher.rs  lib.rs  net.rs  output.rs  p2p.rs  reqwest.rs  response.rs  rollup.rs  superchain.rs  traits.rs  ws.rs
crates/node/service/: Cargo.toml  README.md
crates/node/service/src/: lib.rs  sync_start.rs
crates/node/sources/: Cargo.toml  README.md
crates/node/sources/src/: lib.rs  metrics.rs
crates/proof/executor/: CHANGELOG.md  Cargo.toml  README.md
crates/proof/executor/benches/: execution.rs
crates/proof/executor/src/: constants.rs  errors.rs  lib.rs  test_utils.rs  util.rs
crates/proof/proof/: CHANGELOG.md  Cargo.toml  README.md
crates/proof/proof/src/: boot.rs  caching_oracle.rs  eip2935.rs  errors.rs  executor.rs  hint.rs  lib.rs  sync.rs
crates/protocol/comp/: Cargo.toml  README.md
crates/protocol/comp/examples/: batch_to_frames.rs
crates/protocol/comp/src/: channel_out.rs  lib.rs
crates/protocol/genesis/: Cargo.toml  README.md
crates/protocol/genesis/maili/: Cargo.toml  README.md
crates/protocol/genesis/src/: genesis.rs  lib.rs  params.rs  rollup.rs
crates/protocol/hardforks/: CHANGELOG.md  Cargo.toml  README.md
crates/protocol/hardforks/src/: ecotone.rs  fjord.rs  forks.rs  interop.rs  isthmus.rs  lib.rs  test_utils.rs  utils.rs
crates/protocol/interop/: Cargo.toml  README.md
crates/protocol/interop/maili/: Cargo.toml  README.md
crates/protocol/interop/src/: access_list.rs  client.rs  constants.rs  depset.rs  derived.rs  errors.rs  graph.rs  lib.rs  message.rs  root.rs  safety.rs  super_root.rs  supervisor.rs  test_util.rs
crates/protocol/protocol/: Cargo.toml  README.md
crates/protocol/protocol/examples/: batch_to_frames.rs  frames_to_batch.rs
crates/protocol/protocol/maili/: Cargo.toml  README.md
crates/protocol/protocol/src/: attributes.rs  block.rs  brotli.rs  channel.rs  channel_out.rs  deposits.rs  errors.rs  fee.rs  frame.rs  iter.rs  lib.rs  output_root.rs  predeploys.rs  sync.rs  test_utils.rs  utils.rs
crates/protocol/registry/: Cargo.toml  README.md  build.rs
crates/protocol/registry/etc/: configs.json
crates/protocol/registry/maili/: Cargo.toml  README.md
crates/protocol/registry/src/: chain_list.rs  lib.rs  superchain.rs
crates/providers/providers-alloy/: CHANGELOG.md  Cargo.toml  README_CONFIRMATION_DELAY.md
crates/providers/providers-alloy/src/: beacon_client.rs  blobs.rs  chain_provider.rs  confirmation_delayed.rs  l2_chain_provider.rs  lib.rs  metrics.rs  pipeline.rs
crates/providers/providers-local/: CHANGELOG.md  Cargo.toml  README.md
crates/providers/providers-local/src/: buffer.rs  buffered.rs  chain_provider.rs  l2_chain_provider.rs  lib.rs  metrics.rs
crates/providers/providers-local/tests/: integration.rs
crates/rollup/service/: Cargo.toml
crates/rollup/service/src/: config.rs  error.rs  exex.rs  lib.rs  service.rs
crates/supervisor/core/: Cargo.toml
crates/supervisor/core/src/: error.rs  lib.rs  supervisor.rs
crates/supervisor/rpc/: Cargo.toml
crates/supervisor/rpc/src/: jsonrpsee.rs  lib.rs  response.rs
crates/supervisor/service/: Cargo.toml
crates/supervisor/service/src/: lib.rs  service.rs
crates/supervisor/storage/: Cargo.toml
crates/supervisor/storage/src/: chaindb.rs  chaindb_factory.rs  error.rs  lib.rs  metrics.rs  traits.rs
crates/supervisor/types/: Cargo.toml
crates/supervisor/types/src/: access_list.rs  chain_id.rs  head.rs  lib.rs  receipt.rs  types.rs  utils.rs
crates/umbrella/: Cargo.toml  README.md
crates/umbrella/src/: lib.rs
crates/utilities/cli/: Cargo.toml
crates/utilities/cli/src/: cli_parsers.rs  lib.rs  log.rs  metrics_args.rs  node_config.rs  prometheus.rs  sigsegv_handler.rs  tracing.rs
examples/p2p-scoring/: Cargo.toml  README.md
examples/p2p-scoring/src/: config.rs  main.rs  monitoring.rs  profiles.rs
(+847 files in other folders)
