[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"
authors = ["clabby", "refcell"]
homepage = "https://github.com/op-rs/kona"
repository = "https://github.com/op-rs/kona"
keywords = ["ethereum", "optimism", "crypto"]
categories = ["cryptography", "cryptography::cryptocurrencies"]
exclude = ["**/target"]

[workspace]
members = [
  "bin/*",
  "crates/proof/*",
  "crates/node/*",
  "crates/protocol/*",
  "crates/providers/*",
  "crates/utilities/*",
]
default-members = [
  "bin/host",
  "bin/client",
  "bin/node",
]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
needless-return = "allow" # Temporary fix since this is breaking in nightly clippy
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.bench]
debug = true

[profile.dev-client]
inherits = "dev"
panic = "abort"

[profile.release-client-lto]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = "fat"

[workspace.dependencies]
# Binaries
kona-host = { path = "bin/host", version = "0.1.1", default-features = false }
kona-client = { path = "bin/client", version = "0.1.0", default-features = false }

# Protocol
kona-driver = { path = "crates/protocol/driver", version = "0.2.3", default-features = false }
kona-derive = { path = "crates/protocol/derive", version = "0.2.4", default-features = false }
kona-interop = { path = "crates/protocol/interop", version = "0.2.4", default-features = false }
kona-genesis = { path = "crates/protocol/genesis", version = "0.2.4", default-features = false }
kona-protocol = { path = "crates/protocol/protocol", version = "0.2.4", default-features = false }
kona-registry = { path = "crates/protocol/registry", version = "0.2.4", default-features = false }
kona-hardforks = { path = "crates/protocol/hardforks", version = "0.2.4", default-features = false }

# Node
kona-net = { path = "crates/node/net", version = "0.1.0", default-features = false }
kona-rpc = { path = "crates/node/rpc", version = "0.1.1", default-features = false }
kona-engine = { path = "crates/node/engine", version = "0.1.0", default-features = false }

# Providers
kona-providers-local = { path = "crates/providers/providers-local", version = "0.1.0", default-features = false }
kona-providers-alloy = { path = "crates/providers/providers-alloy", version = "0.1.0", default-features = false }

# Proof
kona-mpt = { path = "crates/proof/mpt", version = "0.1.2", default-features = false }
kona-proof = { path = "crates/proof/proof", version = "0.2.3", default-features = false }
kona-executor = { path = "crates/proof/executor", version = "0.2.3", default-features = false }
kona-std-fpvm = { path = "crates/proof/std-fpvm", version = "0.1.2", default-features = false }
kona-preimage = { path = "crates/proof/preimage", version = "0.2.1", default-features = false }
kona-std-fpvm-proc = { path = "crates/proof/std-fpvm-proc", version = "0.1.2", default-features = false }
kona-proof-interop = { path = "crates/proof/proof-interop", version = "0.1.1", default-features = false }

# Utilities
kona-cli = { path = "crates/utilities/cli", version = "0.1.0", default-features = false }
kona-serde = { path = "crates/utilities/serde", version = "0.1.1", default-features = false }

# Alloy
alloy-rlp = { version = "0.3.11", default-features = false }
alloy-trie = { version = "0.7.9", default-features = false }
alloy-chains = { version = "0.1", default-features = false }
alloy-eips = { version = "0.12.0", default-features = false }
alloy-serde = { version = "0.12.0", default-features = false }
alloy-network = { version = "0.12.0", default-features = false }
alloy-provider = { version = "0.12.0", default-features = false }
alloy-sol-types = { version = "0.8.22", default-features = false }
alloy-consensus = { version = "0.12.0", default-features = false }
alloy-transport = { version = "0.12.0", default-features = false }
alloy-rpc-types = { version = "0.12.0", default-features = false }
alloy-rpc-client = { version = "0.12.0", default-features = false }
alloy-primitives = { version = "0.8.21", default-features = false }
alloy-node-bindings = { version = "0.12.0", default-features = false }
alloy-rpc-types-eth = { version = "0.12.0", default-features = false }
alloy-transport-http = { version = "0.12.0", default-features = false }
alloy-rpc-types-engine = { version = "0.12.0", default-features = false }
alloy-rpc-types-beacon = { version = "0.12.0", default-features = false }
alloy-network-primitives = { version = "0.12.0", default-features = false }

# OP Alloy
op-alloy-flz = { version = "0.11.0", default-features = false }
op-alloy-network = { version = "0.11.0", default-features = false }
op-alloy-provider = { version = "0.11.0", default-features = false }
op-alloy-consensus = { version = "0.11.0", default-features = false }
op-alloy-rpc-types = { version = "0.11.0", default-features = false }
op-alloy-rpc-jsonrpsee = { version = "0.11.0", default-features = false }
op-alloy-rpc-types-engine = { version = "0.11.0", default-features = false }

# Reth
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0", default-features = false }

# General
url = "2.5.4"
lru = "0.13.0"
spin = "0.9.8"
clap = "4.5.31"
tower = "0.5.2"
tokio = "1.43.0"
cfg-if = "1.0.0"
rstest = "0.25.0"
futures = "0.3.31"
reqwest = "0.12.12"
tempfile = "3.18.0"
arbitrary = "1.4.1"
tokio-util = "0.7.13"
parking_lot = "0.12.3"
async-trait = "0.1.87"
async-channel = "2.3.1"
http-body-util = "0.1.2"
linked_list_allocator = "0.10.5"

# Compression
getrandom = "0.3.1"
miniz_oxide = "0.8.5"
alloc-no-stdlib = "2.0.4"
brotli = { version = "7.0.0", default-features = false }

# rpc
jsonrpsee = "0.24.8"

# General
rand = { version = "0.9.0", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
c-kzg = { version = "2.0.0", default-features = false }
anyhow = { version = "1.0.95", default-features = false }
thiserror = { version = "2.0.11", default-features = false }
derive_more = { version = "2.0.1", default-features = false }
lazy_static = { version = "1.5.0", default-features = false }

# Networking
snap = "1.1.1"
discv5 = "0.9.1"
libp2p = "0.54.1"
openssl = "0.10.70"
libp2p-identity = "0.2.10"

# Tracing
tracing-loki = "0.2.6"
tracing-subscriber = "0.3.19"
tracing = { version = "0.1.41", default-features = false }
metrics-exporter-prometheus = { version = "0.16.0", default-features = false }

# Testing
pprof = "0.14.0"
arbtest = "0.3.2"
proptest = "1.6.0"
criterion = "0.5.1"

# Serialization
rkyv = "0.8.10"
serde_repr = "0.1.19"
serde = { version = "1.0.217", default-features = false }
toml = { version = "0.8.19", default-features = false }
serde_json = { version = "1.0.138", default-features = false }

# Ethereum
unsigned-varint = "0.8.0"
revm = { version = "19.5.0", default-features = false }

# K/V database
rocksdb = { version = "0.22.0", default-features = false }
