[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"
authors = ["clabby", "refcell"]
homepage = "https://github.com/op-rs/kona"
repository = "https://github.com/op-rs/kona"
keywords = ["ethereum", "optimism", "crypto"]
categories = ["cryptography", "cryptography::cryptocurrencies"]
exclude = ["**/target"]

[workspace]
resolver = "2"
members = [
  "bin/*",
  "crates/proof/*",
  "crates/node/*",
  "crates/supervisor/*",
  "crates/protocol/*",
  "crates/providers/*",
  "crates/utilities/*",
  "examples/*",
]
default-members = [
  "bin/host",
  "bin/client",
  "bin/node",
  "bin/supervisor",
]

[workspace.metadata.cargo-udeps.ignore]
normal = ["rustls-platform-verifier"]

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.bench]
debug = true

[profile.dev-client]
inherits = "dev"
panic = "abort"

[profile.release-client-lto]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = "fat"

[profile.release-perf]
inherits = "release"
lto = "fat"
codegen-units = 1

[workspace.dependencies]
# Binaries
kona-host = { path = "bin/host", version = "1.0.1", default-features = false }
kona-client = { path = "bin/client", version = "1.0.1", default-features = false }

# Protocol
kona-comp = { path = "crates/protocol/comp", version = "0.3.0", default-features = false }
kona-driver = { path = "crates/protocol/driver", version = "0.3.0", default-features = false }
kona-derive = { path = "crates/protocol/derive", version = "0.3.0", default-features = false }
kona-interop = { path = "crates/protocol/interop", version = "0.3.0", default-features = false }
kona-genesis = { path = "crates/protocol/genesis", version = "0.3.0", default-features = false }
kona-protocol = { path = "crates/protocol/protocol", version = "0.3.0", default-features = false }
kona-registry = { path = "crates/protocol/registry", version = "0.3.0", default-features = false }
kona-hardforks = { path = "crates/protocol/hardforks", version = "0.3.0", default-features = false }

# Node
kona-p2p = { path = "crates/node/p2p", version = "0.1.0", default-features = false }
kona-rpc = { path = "crates/node/rpc", version = "0.2.0", default-features = false }
kona-engine = { path = "crates/node/engine", version = "0.1.0", default-features = false }
kona-sources = { path = "crates/node/sources", version = "0.1.0", default-features = false }
kona-node-service = { path = "crates/node/service", version = "0.1.0", default-features = false }

# Supervisor
kona-supervisor-rpc = { path = "crates/supervisor/rpc", version = "0.1.0", default-features = false }
kona-supervisor-core = { path = "crates/supervisor/core", version = "0.1.0", default-features = false }
kona-supervisor-service = { path = "crates/supervisor/service", version = "0.1.0", default-features = false }
kona-supervisor-types = { path = "crates/supervisor/types", version = "0.1.0", default-features = false }

# Providers
kona-providers-alloy = { path = "crates/providers/providers-alloy", version = "0.2.0", default-features = false }

# Proof
kona-mpt = { path = "crates/proof/mpt", version = "0.2.0", default-features = false }
kona-proof = { path = "crates/proof/proof", version = "0.3.0", default-features = false }
kona-executor = { path = "crates/proof/executor", version = "0.3.0", default-features = false }
kona-std-fpvm = { path = "crates/proof/std-fpvm", version = "0.2.0", default-features = false }
kona-preimage = { path = "crates/proof/preimage", version = "0.3.0", default-features = false }
kona-std-fpvm-proc = { path = "crates/proof/std-fpvm-proc", version = "0.2.0", default-features = false }
kona-proof-interop = { path = "crates/proof/proof-interop", version = "0.2.0", default-features = false }

# Utilities
kona-cli = { path = "crates/utilities/cli", version = "0.2.0", default-features = false }
kona-serde = { path = "crates/utilities/serde", version = "0.2.0", default-features = false }
kona-macros = { path = "crates/utilities/macros", version = "0.1.0", default-features = false }

# Alloy
alloy-rlp = { version = "0.3.11", default-features = false }
alloy-trie = { version = "0.8.1", default-features = false }
alloy-chains = { version = "0.2", default-features = false }
alloy-eips = { version = "1.0.0", default-features = false }
alloy-serde = { version = "1.0.0", default-features = false }
alloy-network = { version = "1.0.0", default-features = false }
alloy-provider = { version = "1.0.0", default-features = false }
alloy-hardforks = { version = "0.2.0", default-features = false }
alloy-sol-types = { version = "1.1.0", default-features = false }
alloy-consensus = { version = "1.0.0", default-features = false }
alloy-transport = { version = "1.0.0", default-features = false }
alloy-rpc-types = { version = "1.0.0", default-features = false }
alloy-rpc-client = { version = "1.0.0", default-features = false }
alloy-primitives = { version = "1.1.0", default-features = false }
alloy-node-bindings = { version = "1.0.0", default-features = false }
alloy-rpc-types-eth = { version = "1.0.0", default-features = false }
alloy-transport-http = { version = "1.0.0", default-features = false }
alloy-rpc-types-engine = { version = "1.0.0", default-features = false }
alloy-rpc-types-beacon = { version = "1.0.0", default-features = false }
alloy-network-primitives = { version = "1.0.0", default-features = false }

# OP Alloy
op-alloy-network = { version = "0.17.0", default-features = false }
alloy-op-hardforks = { version = "0.2.0", default-features = false }
op-alloy-provider = { version = "0.17.0", default-features = false }
op-alloy-consensus = { version = "0.17.0", default-features = false }
op-alloy-rpc-types = { version = "0.17.0", default-features = false }
op-alloy-rpc-jsonrpsee = { version = "0.17.0", default-features = false }
op-alloy-rpc-types-engine = { version = "0.17.0", default-features = false }

# Execution
revm = { version = "24.0.0", default-features = false }
op-revm = { version = "5.0.0", default-features = false }
alloy-evm = { version = "0.10.0", default-features = false }
alloy-op-evm = { version = "0.10.0", default-features = false }

# Reth (pinned to v1.3.12 for kona-supervisor-storage)
reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }

# General
url = "2.5.4"
lru = "0.14.0"
dirs = "6.0.0"
spin = "0.10.0"
clap = "4.5.38"
tower = "0.5.2"
vergen = "9.0.0"
tokio = "1.44.2"
rayon = "1.10.0"
cfg-if = "1.0.0"
rstest = "0.25.0"
ratatui = "0.29.0"
futures = "0.3.31"
reqwest = "0.12.15"
tempfile = "3.19.1"
bytes = "1.10.1"
test-fuzz = "7.2.0"
arbitrary = "1.4.1"
multihash = "0.19.3"
crossterm = "0.29.0"
color-eyre = "0.6.3"
eyre = "0.6"
jsonrpsee = "0.25.1"
modular-bitfield = "0.11.2"
tokio-util = "0.7.15"
vergen-git2 = "1.0.0"
parking_lot = "0.12.3"
async-trait = "0.1.88"
tokio-stream = "0.1.17"
async-stream = "0.3.6"
async-channel = "2.3.1"
http-body-util = "0.1.3"
unsigned-varint = "0.8.0"
tracing-appender = "0.2.3"
buddy_system_allocator = "0.11.0"

rand = { version = "0.9.1", default-features = false }
tabled = { version = "0.19", default-features = false }
backon = { version = "1.5.0", default-features = false }
anyhow = { version = "1.0.98", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
derive_more = { version = "2.0.1", default-features = false }
lazy_static = { version = "1.5.0", default-features = false }

# Compression
getrandom = "0.3.2"
miniz_oxide = "0.8.8"
alloc-no-stdlib = "2.0.4"
brotli = { version = "8.0.0", default-features = false }

# Networking
snap = "1.1.1"
discv5 = "0.9.1"
libp2p = "0.55.0"
libp2p-identity = "0.2.10"
openssl = "0.10.72"

# Tracing
tracing-loki = "0.2.6"
tracing-subscriber = "0.3.19"
tracing = { version = "0.1.41", default-features = false }

# Metrics
metrics = { version = "0.24.2", default-features = false }
prometheus = { version = "0.14.0", default-features = false }
metrics-exporter-prometheus = { version = "0.17.0", default-features = false }

# Testing
pprof = "0.14.0"
arbtest = "0.3.2"
proptest = "1.6.0"
criterion = "0.5.1"

# Serialization
rkyv = "0.8.10"
serde_repr = "0.1.20"
toml = { version = "0.8.20", default-features = false }
serde = { version = "1.0.219", default-features = false }
serde_json = { version = "1.0.140", default-features = false }

# K/V database
rocksdb = { version = "0.23.0", default-features = false }

# Cryptography
sha2 = { version = "0.10.8", default-features = false }
c-kzg = { version = "2.0.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
secp256k1 = { version = "0.31.0", default-features = false }
ark-bls12-381 = { version = "0.5.0", default-features = false }
