[package]
name = "kona"
version = "0.1.0"
description = "Collection of Extensible OP Stack Services and Components"

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
# Workspace Proofs
kona-mpt = { workspace = true, optional = true }
kona-proof = { workspace = true, optional = true }
kona-executor = { workspace = true, optional = true }
kona-std-fpvm = { workspace = true, optional = true }
kona-preimage = { workspace = true, optional = true }
kona-proof-interop = { workspace = true, optional = true }

# Workspace External
kona-net = { workspace = true, optional = true }
kona-rpc = { workspace = true, optional = true }

# Workspace Protocol
kona-protocol = { workspace = true, optional = true }
kona-derive = { workspace = true, optional = true }
kona-driver = { workspace = true, optional = true }
kona-registry = { workspace = true, optional = true }
kona-genesis  = { workspace = true, optional = true }
kona-interop = { workspace = true, optional = true }

# Workspace Providers
kona-providers-local = { workspace = true, optional = true }
kona-providers-alloy = { workspace = true, optional = true }

[features]
default = ["std", "serde"]

std = [
	"maili-protocol?/std",
	"maili-registry?/std",
	"maili-genesis?/std",
	"maili-rpc?/std"
]

full = [
  "proof",
  "protocol",
  "external",
  "providers"
]

proof = [
  "dep:kona-mpt",
  "dep:kona-proof",
  "dep:kona-executor",
  "dep:kona-std-fpvm",
  "dep:kona-preimage",
  "dep:kona-proof-interop"
]

protocol = [
  "dep:kona-protocol",
  "dep:kona-derive",
  "dep:kona-driver",
  "dep:kona-registry",
  "dep:kona-genesis",
  "dep:kona-interop"
]

external = [
  "dep:kona-net",
  "dep:kona-rpc"
]

providers = [
  "dep:kona-providers-local",
  "dep:kona-providers-alloy"
]

serde = [
	"maili-protocol?/serde",
	"maili-genesis?/serde",
	"maili-rpc?/serde"
]
