[package]
name = "example-p2p-scoring"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
kona-cli.workspace = true
kona-p2p.workspace = true
kona-peers.workspace = true
kona-node-service.workspace = true
kona-registry.workspace = true
libp2p.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-util.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
discv5.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
openssl.workspace = true
snap.workspace = true