[package]
name = "kona-disc"
version = "0.1.0"
description = "Discovery library for the OP Stack"

edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# Kona
kona-peers.workspace = true
kona-macros.workspace = true

# Alloy
alloy-rlp.workspace = true

# Networking
libp2p.workspace = true
discv5 = { workspace = true, features = ["libp2p"] }

# Misc
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
rand = { workspace = true, features = ["thread_rng"] }
backon = { workspace = true, features = ["std", "tokio", "tokio-sleep"] }
derive_more = { workspace = true, features = ["display", "deref", "debug"] }

# `metrics` feature
metrics = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
kona-cli.workspace = true
kona-genesis.workspace = true
multihash.workspace = true
serde_json.workspace = true
rand = { workspace = true, features = ["thread_rng"] }
arbitrary = { workspace = true, features = ["derive"] }

[features]
default = []
metrics = [ "dep:metrics" ]