[package]
name = "kona-p2p"
version = "0.1.0"
description = "P2P library for the OP Stack"

edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# Kona
kona-disc.workspace = true
kona-peers.workspace = true
kona-gossip.workspace = true
kona-genesis.workspace = true

# Alloy
alloy-primitives = { workspace = true, features = ["k256", "getrandom"] }

# Op Alloy
op-alloy-rpc-types-engine = { workspace = true, features = ["std"] }

# Networking
discv5 = { workspace = true, features = ["libp2p"] }
libp2p = { workspace = true, features = ["macros", "tokio", "tcp", "noise", "gossipsub", "ping", "yamux", "identify"] }

# Misc
backon.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
derive_more = { workspace = true, features = ["display", "deref", "debug"] }

[dev-dependencies]
arbtest.workspace = true
tempfile.workspace = true
kona-cli.workspace = true
multihash.workspace = true
alloy-eips.workspace = true

libp2p-identity = { workspace = true, features = ["secp256k1"] }
serde_json = { workspace = true, features = ["alloc"] }
rand = { workspace = true, features = ["thread_rng"] }
alloy-primitives = { workspace = true, features = ["arbitrary"] }
alloy-rpc-types-engine = { workspace = true, features = ["std"] }
alloy-consensus = { workspace = true, features = ["arbitrary", "k256"] }
op-alloy-consensus = { workspace = true, features = ["arbitrary", "k256"] }

[features]
default = []
